      getting has been fixed.
    + Build with -gstabs on armhf and kfreebsd to try to eat less memory
      and make the build succeed. If it doesn't we may have to disable
      debugging symbols as we do in many other arches.

  [ Gustavo Noronha Silva ]
  * New upstream release
  * debian/*.symbols, debian/*.install, debian/symbols.filter,
    debian/patches/01_do-not-build-testing-tools.patch:
  - Avoid exposing a ton of C++ symbols by not building the testing
    tools
  * debian/rules:
  - move dh_autoreconf call to its own rule with its own custom stamp,
    so we can just call binary if the build fails and we want to try again

 -- Gustavo Noronha Silva <kov@debian.org>  Thu, 08 Aug 2013 20:00:46 -0300

webkitgtk (2.0.3-1) experimental; urgency=low

  * Team upload.

  * debian/libwebkit2gtk-3.0-25.symbols:
    + Added missing i386 symbols. Should really fix the i386 build.
      Closes: #704886.
  * debian/rules:
    + Pass -I Source/autotools to autoreconf to make sure aclocal can find
      the necessary macros, as otherwise some versions such as aclocal-1.11
      have some trouble with this.
    + Add --disable-jit back on mipsel, armel and powerpc. The change was
      probably lost with the webkit2 addition.
    + Don't pass --with-gstreamer=1.0 anymore, GStreamer support is always
      1.0 now and the configure flag has been dropped.
    + Don't pass --disable-plugin-process. The flag is gone and the plugin
      process is always built for WebKit2, which is what we were doing.
    + Don't pass --disable-jit on powerpc. Instead disable JIT, YARR and
      assembler in ia64 powerpc sparc s390 and s390x as there's no
      support for MacroAssembler for them.
  * debian/patches/changeset_145551.diff:
    + Backport from upstream, implement Double2Ints in CLoop backend for
      32 bit architectures, needed for the above architectures where we
      disable JIT, YARR and assembler.
  * debian/control: